--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <form class="search-form" id="search-form">
       <input
         type="text"
-        name="searchQuery"
+        name="query"
         autocomplete="off"
         placeholder="Search images..."
       />
