--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <form class="search-form" id="search-form">
       <input
+        class="input"
         type="text"
         name="query"
         autocomplete="off"
         placeholder="Search images..."
       />
-      <button type="submit">Search</button>
+      <button class="submit-btn page-btn" type="submit">Search</button>
     </form>
 
     <div class="gallery"></div>
 
-    <button type="button" class="load-more">Load more</button>
+    <button type="button" class="load-more page-btn">Load more</button>
 
     <script src="index.js" type="module"></script>
   </body>
